--- a/src/styles.css
+++ b/src/styles.css
@@ -131,3 +131,18 @@ div.error {
 .hidden {
   display: none;
 }
+
+@media (max-width: 700px) {
+  .newsletter-wrapper {
+    background-color: hsl(0, 0%, 100%);
+  }
+
+  .newsletter-sign-up {
+    flex-direction: column-reverse;
+    padding: 0;
+  }
+
+  .content + img {
+    content: url("./assets/images/illustration-sign-up-mobile.svg");
+  }
+}
